# openai-agent-sdk-playground

./: .gitignore  README.md  main.py  pyproject.toml
ai_agent/autonomus_research/: autonomous_planner_agent.py  autonomous_research_manager.py  builder.py  email_agent.py  evaluator_agent.py  optimizer_agent.py  search_agent.py
ai_agent/autonomus_research/tools/: research_tools.py  websearch_tool.py
ai_agent/basic/: joke_agent.py
ai_agent/deep_research/: email_agent.py  planner_agent.py  report_agent.py  research_manager.py  search_agent.py
ai_agent/deep_research/tools/: websearch_tool.py
ai_agent/sales_outreach/: builder.py  email_agent.py  manager.py  sales_agent.py
ai_agent/sales_outreach/tools/: sales_tools.py
ai_agent/sales_outreach/utils/: guardrails.py
config/: settings.py
core/logging/: logger.py
core/memory/: base.py  simple_memory.py
models/: factory.py  ollama_model.py  openai_model.py
runners/: run_autonomous_research.py  run_joke.py  run_research.py  run_sales.py
